[tool.poetry]
name = "pythonproject4"
version = "0.1.0"
description = ""
authors = ["QA-BelyaevAA <114562954+QA-BelyaevAA@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
black = "^22.10.0"
flake8 = "^5.0.4"
selenium = "^4.6.0"
pytest = "^7.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
